@@ -1,0 +1,21 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<addon id="Board_Game" xmlns="http://icplayer.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://icplayer.com ../../tools/addon.xsd">
+	<model>
+        <property name="Background" displayName="Background" nameLabel="Board_game_property_background" type="image"/>
+        <property name="hasFields" displayName="has Fields" nameLabel="Board_game_property_has_fields" type="boolean"/>
+        <property name="Fields" nameLabel="Board_game_property_fields" type="list">
+            <property name="Top" nameLabel="Board_game_property_top" type="string"/>
+            <property name="Left" nameLabel="Board_game_property_left" type="string"/>
+            <property name="Width" nameLabel="Board_game_property_width" type="string"/>
+            <property name="Height" nameLabel="Board_game_property_height" type="string"/>
+        </property>
+        <property name="Images" displayName="Elements" nameLabel="Board_game_property_images" type="list">
+            <property name="PawnImage" displayName="Element Image" nameLabel="Board_game_property_pawn_image" type="image"/>
+            <property name="Top" nameLabel="Board_game_property_top" type="string"/>
+            <property name="Left" nameLabel="Board_game_property_left" type="string"/>
+            <property name="Width" nameLabel="Board_game_property_width" type="string"/>
+            <property name="Height" nameLabel="Board_game_property_height" type="string"/>
+        </property>
+        <property name="isDisable" nameLabel="Board_game_property_is_disable" type="boolean"/>
+	</model>
+</addon>
