@@ -1,0 +1,2 @@
+<p class="board-game-counter" style="position: absolute;"></p>
+<div id="board-game-container" class="board-game-container"></div>
