@@ -6,6 +6,7 @@ Animated_Page_Progress
 Animation
 Audio
 Basic_Math_Gaps
+Board_Game
 Clock
 Coloring
 Completion_Progress
