@@ -1,3 +1,4 @@
+2015-07-15 Added new module Board Game
 2015-07-15 Added show answers mode to Math module connected with Text, Table and Image Gap modules
 2015-07-10 Added selection by plotting in Magic Boxes module
 2015-07-09 Fixed issue with wrong input in order property in Ordering module
